create entity and split request create product